# verify-image-signatures

./: Cargo.toml  Makefile  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  hub.yml  metadata.yml  questions-ui.yml
.github/workflows/: open-release-pr.yml  release-tag.yml  release.yml  test.yml
src/: lib.rs  settings.rs
src/settings/: certificate.rs  github_actions.rs  keyless.rs  keyless_prefix.rs  mod.rs  pub_keys.rs  validation_helpers.rs
test_data/: cronjob_creation_signed.json  cronjob_creation_unsigned.json  daemonset_creation_signed.json  daemonset_creation_unsigned.json  deployment_creation_signed.json  deployment_creation_unsigned.json  job_creation_signed.json  job_creation_unsigned.json  pod_creation.json  pod_creation_invalid_name.json  pod_creation_signed.json  pod_creation_signed_with_certificate.json  pod_creation_signed_with_keyless_mode.json  pod_creation_unsigned.json  pod_creation_with_digest.json  pod_creation_with_init_container.json  replicaset_creation_signed.json  replicaset_creation_unsigned.json  replicationcontroller_creation_signed.json  replicationcontroller_creation_unsigned.json  settings-cert-verification-wrong-cert-chain.yaml  settings-keyless-signing-wrong-subject.yaml  settings-keyless-signing.yaml  settings-mutation-disabled.yaml  settings-mutation-enabled.yaml  settings-pod_signed_with_cert_and_rekor.yaml  settings.yaml  statefulset_creation_signed.json  statefulset_creation_unsigned.json
test_data/certificate-signing/: .gitignore  Makefile  README.md  ca.json  cfssl.json  intermediate-ca.json  sunlight.json  user-1.json  user-2.json
