[package]
name = "verify-image-signatures"
version = "0.2.6"
authors = ["Raul Cabello <raul.cabello@suse.com>","Víctor Cuadrado <vcuadradojuan@suse.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.18.0", default_features = false, features = ["v1_24"] }
kubewarden-policy-sdk = "0.9.4"
lazy_static = "1.4"
pem = "2.0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slog = "2.7"
validator = { version = "0.16", features = ["derive"] }
wildmatch = "2.1.1"

[dev-dependencies]
mockall = "0.11"
rstest = "0.17.0"
serial_test = "2.0.0"
