[package]
name = "verify-image-signatures"
version = "0.2.9"
authors = [
  "Raul Cabello <raul.cabello@suse.com>",
  "Víctor Cuadrado <vcuadradojuan@suse.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.22.0", default_features = false, features = [
  "v1_27",
] }
kubewarden-policy-sdk = "0.10.0"
lazy_static = "1.4"
pem = "3.0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slog = "2.7"
validator = { version = "0.18", features = ["derive"] }
wildmatch = "2.3.3"

[dev-dependencies]
mockall = "0.12"
rstest = "0.19.0"
serial_test = "3.1.1"
